--- a/src/pages/view-monster/view-monster.scss
+++ b/src/pages/view-monster/view-monster.scss
@@ -14,6 +14,11 @@ body {
   .toolbar-background {
     background-color: #FDF1DC;
   }
+
+  .monster-total {
+    background: #FDF1DC; 
+  }
+  
   .stat-block {
     text-align: left;
     margin: 20px;
@@ -24,8 +29,6 @@ body {
     min-width:280px;
     background: #FDF1DC;
     padding: 5px 10px 20px;
-    box-shadow: 0 0 1.5em #867453;
-    overflow: scroll;
   }
   .stat-block.wide{
     width: 46.5%;
